dokuwiki-ittlabb/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dokuwiki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dokuwiki
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: dokuwiki
    spec:
      securityContext:
        runAsUser: 1001
        fsGroup: 1001
      containers:
      - image: bitnami/dokuwiki:latest
        name: dokuwiki
        ports:
        - containerPort: 8080
          name: dokuwiki
        volumeMounts:
        - name: dokuwiki-persistent-storage
          mountPath: /bitnami/dokuwiki
      volumes:
      - name: dokuwiki-persistent-storage
        persistentVolumeClaim:
          claimName: dokuwiki-pv-claim
