dokuwiki-ittlabb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dokuwiki
spec:
  type: NodePort
  ports:
   - nodePort: 30171
     port: 80
     targetPort: 8080
  selector:
    app: dokuwiki
