dokuwiki-ittlabb/dokuwiki-ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ittlabb-dokuwiki
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer-name: ca-issuer
spec:
  tls:
  - hosts:
    - dokuwiki.ittlabb.net
    secretName: dokuwiki-cert-tls
  rules:
  - host: dokuwiki.ittlabb.net
    http:
      paths:
      - path: /
        backend:
          serviceName: ittlabb-dokuwiki
          servicePort: 80
